Add the ai client.

--- a/proto/BUILD.bazel
+++ b/proto/BUILD.bazel
@@ -1,8 +1,13 @@
 package(default_visibility = ["//visibility:public"])
 
+load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
+load("@com_github_grpc_grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")
+
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@rules_cc//cc:defs.bzl", "cc_proto_library")
 load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
+
+# PROTO
 
 proto_library(
     name = "game_proto",
@@ -17,6 +22,20 @@ cc_proto_library(
 py_proto_library(
     name = "game_py_proto",
     deps = [":game_proto"],
+)
+
+# GRPC
+
+grpc_proto_library(
+    name = "game_grpc",
+    srcs = ["game.proto"],
+)
+
+cc_grpc_library(
+    name = "game_cc_grpc",
+    srcs = [":game_proto"],
+    grpc_only = True,
+    deps = [":game_cc_proto"],
 )
 
 py_grpc_library(
