Add the Board structure
With tests.

--- a/ais/BUILD
+++ b/ais/BUILD
@@ -1,21 +1,33 @@
+load("@rules_cc//cc:defs.bzl", "cc_test")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "fourInARowAI",
-    srcs = ["fourInARowAI.cpp"],
-    hdrs = ["fourInARowAI.h"],
+    name = "connect4AI",
+    srcs = ["connect4AI.cpp"],
+    hdrs = ["connect4AI.h"],
     deps = [
         "//proto:game_cc_proto",
     ],
 )
 
 cc_binary(
-    name = "fourInARowClient",
-    srcs = ["fourInARowClient.cpp"],
+    name = "connect4Client",
+    srcs = ["connect4Client.cpp"],
     deps = [
-        ":fourInARowAI",
+        ":connect4AI",
         "@com_github_grpc_grpc//:grpc++",
         "//proto:game_cc_proto",
         "//proto:game_cc_grpc",
+    ],
+)
+
+cc_test(
+    name = "connect4Test",
+    srcs = ["connect4Test.cpp"],
+    deps = [
+        ":connect4AI",
+        "@gtest//:gtest",
+        "@gtest//:gtest_main"
     ],
 )
