--- a/brokers/BUILD.bazel
+++ b/brokers/BUILD.bazel
@@ -1,8 +1,8 @@
 package(default_visibility = ["//visibility:public"])
 
 py_binary(
-    name = "fourInARow",
-    srcs = ["fourInARow.py"],
+    name = "connect4",
+    srcs = ["connect4.py"],
     deps = [
         "//proto:game_py_grpc",
         "//proto:game_py_proto",
@@ -10,8 +10,8 @@ py_binary(
 )
 
 py_binary(
-    name = "fourInARowTestClient",
-    srcs = ["fourInARowTestClient.py"],
+    name = "connect4TestClient",
+    srcs = ["connect4TestClient.py"],
     deps = [
         "//proto:game_py_grpc",
         "//proto:game_py_proto",
